# playlist_creator

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  makefile
public/: agree.html  index.html
src/: core.rs  http_health_check.rs  main.rs  models.rs  rabbitmq.rs  rest_api.rs  rest_web.rs  use_case.rs
