[package]
name = "playlist_creator_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "core"
path = "src/core.rs"

[[bin]]
name = "rest"
path = "src/rest.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.19"
hyper = "0.14.20"
keyring = "1.2.0"
reqwest = "0.11.11"
serde = "1.0.140"
csv = "1.1"
rspotify = "0.11.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
async-trait = "0.1.59"
deadpool = "0.9.5"
futures = { version = "0.3.17", default-features = true }
deadpool-lapin = "0.9.0"
tokio-amqp = "1.0.0"
thiserror = "1.0.30"